fix: lightbox padding on mobile.

--- a/themes/bootstrap3/less/components/lightbox.less
+++ b/themes/bootstrap3/less/components/lightbox.less
@@ -3,7 +3,8 @@
 #modal .modal-dialog {
   width: 100%;
   margin-inline: auto;
-  padding-left: 14px;
+  margin-block: 1rem;
+  padding-inline: 1rem;
 }
 @media (min-width: 768px) {
   #modal .modal-dialog {
